# wgpu

./: Cargo.toml  LICENSE
wgpu_main/: Cargo.toml  build.rs
wgpu_main/src/: camera.rs  camera_controller.rs  hdr.rs  instance.rs  lib.rs  light.rs  main.rs  model.rs  resources.rs  shader.wgsl  shader_camera.wgsl  shader_texture.wgsl  state.rs  texture.rs
wgpu_main/src/camera/: camera.rs  camera_controller.rs  mod.rs
wgpu_main/src/resources/: hdr_loader.rs  mod.rs
wgpu_main/src/shaders/: equirectangular.wgsl  hdr.wgsl  light.wgsl  shader.wgsl  shader_camera.wgsl  shader_instances.wgsl
wgpu_main/src/texture/: cube_texture.rs  mod.rs  texture_basic.rs
