[package]
name = "wgpu_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit= "0.29"
env_logger = "0.11"
log= "0.4"
wgpu = {version="0.19", default-features = false, features=["webgl"]}
#wgpu = "0.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1"
wgpu = {version="0.19", default-features = false, features=["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = {version="0.3", features=[
    "Document",
    "Window",
    "Element"
]}

# rlib is for the library, cdylib is for webassembly to run in the browser
[lib]
crate-type = ["cdylib", "rlib"]